# demo_vm

./: Cargo.toml
benches/: fibonacci.rs  vm_bench.rs
src/: cpu.rs  lib.rs  main.rs  memory.rs  sys_call.rs  test.rs  vm.rs
src/cpu/: core.rs
src/memory/: heap.rs
src/sys_call/: write.rs
src/vm/: cpu.rs  isa.rs  memory.rs  reg.rs
src/vm/memory/: heap.rs  stack.rs
