[package]
name = "demo_vm"
version = "0.1.0"
edition = "2021"

[lib]
name = "demo_vm"
[dependencies]
enumflags2 = "0.7.9"
env_logger = "0.11.2"
log = "0.4.20"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.196", features = ["derive"] }
demo_isa = { path = "../demo_isa" }
[profile.release]
strip = true
